force-app/main/default/objects/Quickbooks_Invoice__c/Quickbooks_Invoice__c.object-meta.xml
<CustomObject>
    <description>Quickbooks invoices that are synced</description>
    <label>Quickbooks Invoice</label>
    <nameField>
        <displayFormat>QB-{000000}</displayFormat>
        <label>Quickbooks Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quickbooks Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>