force-app/main/default/objects/Quickbooks_Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>IF( TEXT(Terms__c) = &apos;4&apos;, Invoice_Date__c + 60,

IF( TEXT(Terms__c) = &apos;3&apos;, Invoice_Date__c + 30,

IF( TEXT(Terms__c) = &apos;2&apos;, Invoice_Date__c + 15, Invoice_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>