force-app/main/default/objects/Quickbooks_Invoice__c/fields/Invoice_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent_On__c</fullName>
    <label>Invoice Sent On</label>
    <type>DateTime</type>
</CustomField>