force-app/main/default/objects/Quickbooks_Invoice__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Quickbooks Invoices</relationshipLabel>
    <relationshipName>Quickbooks_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>