force-app/main/default/objects/Quickbooks_Invoice__c/fields/Quickbooks_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Invoice_Number__c</fullName>
    <label>Quickbooks Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>