force-app/main/default/objects/Quickbooks_Invoice__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Account__r.ShippingStreet &amp; &quot; &quot; &amp;
Account__r.ShippingCity &amp; &quot;, &quot; &amp;
Account__r.ShippingState &amp; &quot; &quot; &amp;
Account__r.ShippingPostalCode &amp; &quot; &quot; &amp;
Account__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>