force-app/main/default/objects/Quickbooks_Invoice__c/fields/Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Due__c</fullName>
    <label>Total Due</label>
    <summarizedField>Quickbook_Invoice_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Quickbook_Invoice_Item__c.Quickbooks_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>